--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Mi primer Htm
+<!DOCTYPE html>
+<html>
+	<head>
+	<title>Hola mundo</title>
+	</head>
+	<body>
+		Aprendiendo Git con Bedu
+		Agregando cambios en el archivo
+	</body>
+</html>
+
