--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Hola mundo</title>
+	<title>Hola mundo - Generando comflicto desde master</title>
 	</head>
 	<body>
 		Aprendiendo Git con Bedu
